<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notenapp</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="maxChars">%1$d/%2$d</string>
    <string name="grade">Note</string>
    <string name="element">%d Element</string>
    <string name="elements">%d Elemente</string>
    <string name="average">Durchschnitt: %s</string>
    <string name="add">Add</string>
    <string name="refresh">Aktualisieren</string>
    <string name="email">Email</string>
    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>
    <string name="send">Senden</string>
</resources>