<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/label_create_semester_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_create_semester_name"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_create_semester_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_create_semester_name"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button_create_semester_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryButtonInactive"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_semester_cancel" />

    <Button
        android:id="@+id/button_create_semester_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryButton"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_create_semester_name_char_count" />

    <TextView
        android:id="@+id/label_create_semester_name_char_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxChars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_create_semester_name" />

</androidx.constraintlayout.widget.ConstraintLayout>