<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <TextView
        android:id="@+id/label_create_grade_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_create_grade_name"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_create_grade_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_create_grade_name"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/label_create_grade_name_char_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maxChars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_create_grade_name" />

    <TextView
        android:id="@+id/label_create_grade_grade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_create_grade_grade"
        android:text="@string/grade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_create_grade_name" />

    <EditText
        android:id="@+id/input_create_grade_grade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_create_grade_grade"
        tools:ignore="DuplicateSpeakableTextCheck" />


    <DatePicker
        android:id="@+id/input_create_grade_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="calendar"
        android:headerBackground="@color/primaryButtonActive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_create_grade_grade" />

    <Button
        android:id="@+id/button_create_grade_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primaryButtonInactive"
        android:onClick="save"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_create_grade_cancel" />

    <Button
        android:id="@+id/button_create_grade_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/secondaryButton"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_create_grade_date" />


</androidx.constraintlayout.widget.ConstraintLayout>