<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:onClick="createElement"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/label_list_subject_elements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryButtonInactive"
        android:labelFor="@id/view_list_subject_scrollview"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/element"
        android:textColor="#4E342E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_list_subject_average"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/primaryButtonInactive"
        android:paddingHorizontal="15dp"
        android:paddingVertical="5dp"
        android:text="@string/average"
        android:textColor="#4E342E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:id="@+id/view_list_subject_scrollview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toTopOf="@+id/label_list_subject_average"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_list_subject_elements">

        <LinearLayout
            android:id="@+id/view_list_subject_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:listDivider"
            android:dividerPadding="1dp"
            android:orientation="vertical" />
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>